Fixed interests sizing on small devices.

--- a/domnulfx/css/style.css
+++ b/domnulfx/css/style.css
@@ -1410,7 +1410,7 @@ h1{
 	padding:15px;
 }
 .my-interests ul li{
-	width:100%;
+	width:33%;
 	margin:0 0px 15px 0;
 }
 .my-interests ul li:last-child{
